infrastructure/kubernetes/00-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cicd
  labels:
    name: cicd
---
apiVersion: v1
kind: Namespace
metadata:
  name: code-quality
  labels:
    name: code-quality
---
apiVersion: v1
kind: Namespace
metadata:
  name: dependency-scanner
  labels:
    name: dependency-scanner
---
apiVersion: v1
kind: Namespace
metadata:
  name: metrics
  labels:
    name: metrics
---
apiVersion: v1
kind: Namespace
metadata:
  name: dashboard
  labels:
    name: dashboard
